crates/autoresolve/tests/compile_fail/scoped_type_not_resolvable_from_parent.stderr
warning: unused import: `request_base::RequestBase`
  --> tests/compile_fail/scoped_type_not_resolvable_from_parent.rs:66:5
   |
66 | use request_base::RequestBase;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `task_base::TaskBase`
  --> tests/compile_fail/scoped_type_not_resolvable_from_parent.rs:75:5
   |
75 | use task_base::TaskBase;
   |     ^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `Request: ResolveFrom<AppBase>` is not satisfied
  --> tests/compile_fail/scoped_type_not_resolvable_from_parent.rs:82:26
   |
82 |     let _ = parent.get::<TaskHandler>();
   |                    ---   ^^^^^^^^^^^ unsatisfied trait bound
   |                    |
   |                    required by a bound introduced by this call
   |
help: the trait `ResolveFrom<AppBase>` is not implemented for `Request`
  --> tests/compile_fail/scoped_type_not_resolvable_from_parent.rs:7:1
   |
 7 | pub struct Request;
   | ^^^^^^^^^^^^^^^^^^
help: the following other types implement trait `ResolveFrom<T>`
  --> tests/compile_fail/scoped_type_not_resolvable_from_parent.rs:59:1
   |
59 | #[base(scoped(super::app_base::AppBase))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | |
   | `Request` implements `ResolveFrom<RequestBase>`
   | `Request` implements `ResolveFrom<TaskBase>`
...
68 | #[base(scoped(super::request_base::RequestBase))]
   | ------------------------------------------------- in this attribute macro expansion
note: required for `CorrelationVector` to implement `ResolveFrom<AppBase>`
  --> tests/compile_fail/scoped_type_not_resolvable_from_parent.rs:17:1
   |
17 | #[resolvable]
   | ^^^^^^^^^^^^^ unsatisfied trait bound introduced here
18 | impl CorrelationVector {
   |      ^^^^^^^^^^^^^^^^^
   = note: 1 redundant requirement hidden
   = note: required for `TaskHandler` to implement `ResolveFrom<AppBase>`
note: required by a bound in `Resolver::<T>::get`
  --> src/resolver.rs
   |
   |     pub fn get<O>(&mut self) -> &O
   |            --- required by a bound in this associated function
   |     where
   |         O: ResolveFrom<T>,
   |            ^^^^^^^^^^^^^^ required by this bound in `Resolver::<T>::get`
   = note: this error originates in the attribute macro `base` which comes from the expansion of the attribute macro `resolvable` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Task: ResolveFrom<AppBase>` is not satisfied
  --> tests/compile_fail/scoped_type_not_resolvable_from_parent.rs:82:26
   |
82 |     let _ = parent.get::<TaskHandler>();
   |                    ---   ^^^^^^^^^^^ unsatisfied trait bound
   |                    |
   |                    required by a bound introduced by this call
   |
help: the trait `ResolveFrom<AppBase>` is not implemented for `Task`
      but trait `ResolveFrom<TaskBase>` is implemented for it
  --> tests/compile_fail/scoped_type_not_resolvable_from_parent.rs:68:1
   |
68 | #[base(scoped(super::request_base::RequestBase))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: for that trait implementation, expected `TaskBase`, found `AppBase`
note: required for `TaskProperties` to implement `ResolveFrom<AppBase>`
  --> tests/compile_fail/scoped_type_not_resolvable_from_parent.rs:29:1
   |
29 | #[resolvable]
   | ^^^^^^^^^^^^^ unsatisfied trait bound introduced here
30 | impl TaskProperties {
   |      ^^^^^^^^^^^^^^
   = note: 1 redundant requirement hidden
   = note: required for `TaskHandler` to implement `ResolveFrom<AppBase>`
note: required by a bound in `Resolver::<T>::get`
  --> src/resolver.rs
   |
   |     pub fn get<O>(&mut self) -> &O
   |            --- required by a bound in this associated function
   |     where
   |         O: ResolveFrom<T>,
   |            ^^^^^^^^^^^^^^ required by this bound in `Resolver::<T>::get`
   = note: this error originates in the attribute macro `base` which comes from the expansion of the attribute macro `resolvable` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused variable: `cv`
  --> tests/compile_fail/scoped_type_not_resolvable_from_parent.rs:45:12
   |
45 |     fn new(cv: &CorrelationVector, tp: &TaskProperties) -> Self {
   |            ^^ help: if this is intentional, prefix it with an underscore: `_cv`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default
